Fixed layout issue. Added panel toggle button.

--- a/styles/process-palette.less
+++ b/styles/process-palette.less
@@ -297,7 +297,6 @@
 
   .command-choose-view {
     padding: 5px;
-    overflow: hidden;
 
     .item-view {
       .name-label {
